FIXED FUCKING HORIZONTAL 10PX BUG ON MOBILE

--- a/css/main.css
+++ b/css/main.css
@@ -505,7 +505,15 @@ input:focus, button:focus, .slick-slide {
 }
 
 .rj-logo {
-	margin-bottom: 50px;
+	margin-top: 14px;
+	margin-bottom: 20px;
+	max-height: 64px;
+}
+
+@media only screen and (max-width: 767px)  {
+	.rj-logo {
+		max-width: 96%;
+	}
 }
 
 @media only screen and (max-width: 767px)  {
@@ -1965,6 +1973,17 @@ footer a {
 	text-align: center;
 }
 
+#team-core {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+#team-core:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .teammate-container h4 {
 	color:#eaeaea;
 	font-size:22px;
@@ -1978,19 +1997,19 @@ footer a {
 }
 
 .teammate-photo {
-	height:160px;
-	width:160px;
+	width:100%;
 	border-radius: 50%;
-	margin: 0 auto 20px;
-	background-size: cover;
 }
 
-.teammate-photo-old {
-	height:160px;
-	width:160px;
-	border-radius: 50%;
-	margin: 0 auto;
-	background-size: cover;
+@media only screen and (max-width: 767px)  {
+	.teammate-container h4 {
+		font-size:18px;
+	}
+
+	.teammate-container p {
+		line-height: 22px;
+		font-size: 16px;
+	}
 }
 
 .mail-link {
